--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "require": {
     "php": ">= 7.3",
     "intercom/intercom-php": "^4.0",
-    "illuminate/support": "^5.8|^6.0|^7.0|^8.0",
+    "illuminate/support": "^5.8|^6.0|^7.0|^8.0|^9.0",
     "guzzlehttp/psr7": "^1.7.0"
   },
   "autoload": {
